infra/k8s/aws/overlays/development/shared/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soranix-dev
  labels:
    environment: development
  annotations:
    description: 'Soranix Development Environment'
